Added user endpoints
